# Intelligent-Robots-Lab

./: typescript
Hardware Platform Introduction/: README.md
LAB2/: ros_lab2_dashboard.html
LAB3/: IR_LAB3.md  LAB3_report.md  submission_manifest.txt
LAB4/: LAB4_report.md  code_bundle_manifest.txt  final_submission_manifest.txt  screenshot_checklist.md  submission_manifest.txt
LAB5/: LAB5_report.md  final_submission_manifest.txt  submission_bundle_manifest.txt
LAB5/clean_submission/used_code/: detect_lane_fixed.py  extrinsic_camera_calibration.launch  limo_demo.launch  turtlebot3_autorace_control_lane.launch
LAB5/code_bundle/: LAB5_report.md  code_bundle_manifest.txt  generate_lab5_report.py
LAB5/final_submission/: lab5_validation_summary.txt
LAB5/submit_bundle/: lab5_commands.txt
LAB5/used_code/: detect_lane.launch  display_models.launch  limo_ackerman.launch
tmp/: gazebo_probe.b64  generate_lab4_report.py  generate_lab5_report.py  generate_synthetic_calibration.py  lab4_capture_part2.sh  lab5_demo_detect_lane.b64  lab5_demo_projected.b64  lab5_detect_lane.b64  lab5_detect_lane_remote.b64  lab5_model_rviz_desktop.b64  lab5_projected_image.b64  part3_local_terminal.txt  remote_bash.py  remote_copy.py  remote_exec.py  rosbridge_keyboard_teleop.py  rviz_probe.b64
tmp/lab3_learning_tf_unzip/learning_tf/: CMakeLists.txt  package.xml
tmp/lab3_learning_tf_unzip/learning_tf/launch/: learning_tf_py.launch  rosbot_tf.launch
tmp/lab3_learning_tf_unzip/learning_tf/scripts/: dynamic_tf2_broadcaster.py  fixed_tf2_broadcaster.py  robot_tf_listener.py  rosbot_tf_broadcaster.py  test_scan_publisher.py  turtle_circle_driver.py  turtle_tf2_broadcaster.py  turtle_tf2_listener.py  turtle_tf2_message_broadcaster.py
tmp/pdfs/: generate_lab3_report.py
